prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus  
  namespace: consolide
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
